# Statix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.gateway  Makefile  README.md  docker-compose.yml
.cursor/skills/finops-ebpf-agent/: L8-AUDIT-FIXES.md  L8_AUDIT_V2_FIXES.md  PATTERNS.md  REFERENCE.md  SKILL.md  TODO.md
.cursor/skills/statix-ebpf-agent/: L8-AUDIT-FIXES.md  L8_AUDIT_V2_FIXES.md  L8_POST_GA_FIXES.md  PATTERNS.md  PHASE_10_SRE_PLAYBOOK.md  PHASE_11_WAL_PLAYBOOK.md  PHASE_13_PART1_PLAYBOOK.md  PHASE_13_PART2_PLAYBOOK.md  PHASE_14_CPU_PLAYBOOK.md  REFERENCE.md  SKILL.md  TODO.md
.github/workflows/: ebpf-ci.yml
deploy/clickhouse/: 01_init.sql  README.md
deploy/docker/: Dockerfile.agent  Dockerfile.gateway  Dockerfile.statix  README.md
deploy/grafana/: clickhouse_monitoring.sql
deploy/k8s/: README.md  agent-daemonset.yaml  gateway-ingress.yaml  gateway.yaml  statix-daemonset.yaml
docs/: README.md  enterprise-latency.md  phase2-validation.md  phase3-ingest-interface.md  phase3-validation.md  phase5-production-readiness.md
docs/adr/: 001-use-rustc-hash-for-latency.md  002-double-buffer-aggregator.md  003-early-flush-instead-of-cap-eviction.md  004-swap-buffer-before-drain.md  005-non-blocking-ingest-pipeline.md  006-shared-http-client-for-ingest.md  007-clickhouse-mergetree-tuning.md  008-clickhouse-kafka-engine-resilience.md  009-finops-api-docker-compose.md  010-kafka-partition-key-by-node.md  011-replacingmergetree-dedupe-identity.md  012-finops-api-prometheus-metrics.md  013-configurable-ring-buffer-size.md  014-kafka-producer-env-tuning.md  015-cgroup-v2-bootstrap-on-startup.md  016-clock-domain-offset.md  017-batch-lineage-metadata.md  018-phase-roadmap-status.md  019-ingest-bearer-token-auth.md  020-ingest-schema-version-window.md  021-ingest-ready-probe.md  022-bpf-ring-buffer-drop-counter.md  023-phase5-hot-path-fixes.md  024-agent-production-container.md  025-kubernetes-gateway-and-agent.md  026-clickhouse-finops-database-init.md  027-api-read-path-clickhouse.md  028-finops-wire-and-agent-rename.md  029-ready-channel-depth-gate.md  030-finops-api-config-struct.md  031-grafana-clickhouse-compose.md  032-phase55-l8-p0-hot-path-fixes.md  033-phase55-l8-p1-week-gateway-fixes.md  034-phase55-l8-p2-ingest-zero-copy.md  035-phase7-workspace-restructure.md  036-phase7-typed-errors-labels-read-path.md  037-phase9-ebpf-verifier-ci.md  038-phase55-v2-wave1-l8-fixes.md  039-phase55-v2-wave2-l8-fixes.md  040-phase55-v2-wave3-l8-fixes.md  (+12 more)
docs/adr/phase10/: 059-phase10-clickhouse-cgroup-skip-index.md  060-phase10-golden-signal-saturation-metrics.md
docs/adr/phase11/: 054-phase11-wal-spillway.md
docs/adr/phase13/: 055-phase13-part1-kafka-removal-rowbinary.md  056-phase13-part2-ingest-zero-alloc.md  057-phase13-part2-infra-kafka-strip.md  README.md
docs/adr/phase14/: 058-phase14-cpu-usage-tracking.md  README.md
docs/adr/phase55/: README.md
docs/adr/phase55/l8/: 032-phase55-l8-p0-hot-path-fixes.md  033-phase55-l8-p1-week-gateway-fixes.md  034-phase55-l8-p2-ingest-zero-copy.md
docs/adr/phase55/v2/: 038-phase55-v2-wave1-l8-fixes.md  040-phase55-v2-wave3-l8-fixes.md  042-phase55-v2-p2-sprint-l8-fixes.md  043-kubernetes-alb-tls-termination.md
docs/adr/phase55/v3/: 049-phase55-v3-wave1-silent-deaths.md  050-phase55-v3-wave2-cache-eviction.md  051-phase55-v3-wave3-distributed-state.md  052-phase55-v3-wave4-perf-observability.md  053-phase55-v3-wave5-micro-arch-polish.md
docs/guides/: README.md  enterprise-latency.md  observability-metrics.md  phase2-validation.md  phase3-ingest-interface.md  phase3-validation.md  phase5-production-readiness.md
finops-agent/: Cargo.toml
finops-agent/src/: aggregator.rs  attribution.rs  ebpf_select.rs  lib.rs  loader.rs  main.rs  memory_sampler.rs  output.rs
finops-agent/src/attribution/: error.rs  mod.rs
finops-api/: Cargo.toml
finops-api/src/: config.rs  kafka.rs  main.rs
finops-api/src/routes/: ingest.rs  query.rs
finops-common/: Cargo.toml
finops-common/src/: lib.rs
finops-ebpf/: Cargo.toml  build.rs
finops-ebpf/.cargo/: config.toml
finops-ebpf/src/: main.rs
finops-gateway/: Cargo.toml
finops-gateway/src/: config.rs  error.rs  kafka.rs  main.rs
finops-gateway/src/routes/: ingest.rs  query.rs
finops-infra/: Cargo.toml
finops-infra/src/: env.rs  lib.rs
finops-user/: Cargo.toml
finops-user/src/: aggregator.rs  attribution.rs  loader.rs  main.rs  memory_sampler.rs  output.rs
finops-wire/: Cargo.toml
finops-wire/src/: lib.rs
infra/clickhouse/: README.md  init.sql
scripts/: verify-ebpf-kernel.sh  verify-phase14-cpu.sh  wal-faultfs.sh
statix/: Cargo.toml
statix-common/: Cargo.toml
statix-common/src/: lib.rs
statix-ebpf/: Cargo.toml  build.rs
statix-ebpf/src/: main.rs
statix-gateway/: Cargo.toml
statix-gateway/src/: clickhouse_writer.rs  config.rs  error.rs  kafka.rs  main.rs
statix-gateway/src/routes/: ingest.rs  query.rs
statix-infra/: Cargo.toml
statix-infra/src/: clock.rs  env.rs  lib.rs
statix-wire/: Cargo.toml
statix-wire/src/: lib.rs
statix/src/: aggregator.rs  bpf_memlock.rs  ebpf_select.rs  lib.rs  loader.rs  main.rs  memory_sampler.rs  output.rs
statix/src/attribution/: error.rs  mod.rs
statix/src/wal/: drainer.rs  mod.rs  recovery.rs  segment.rs  writer.rs
