[workspace]
# Only the host-target crates live in the workspace.
# statix-ebpf is excluded because it compiles to bpfel-unknown-none (BPF bytecode),
# a completely different target than the host machine. Including it here would cause
# cargo to try building it for x86_64, which would fail.
members = [
    "statix-common",
    "statix-wire",
    "statix-infra",
    "statix",
    "statix-gateway",
]
resolver = "2"
