[package]
name = "finops-api"
version = "0.1.0"
edition = "2021"
# Phase 3: POST /ingest, GET /health, GET /metrics → Kafka (see docs/adr/012)

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rskafka = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
bytes = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
