[package]
name = "finops-api"
version = "0.1.0"
edition = "2021"
# Ingest gateway: POST /ingest → Kafka; GET read-path → ClickHouse

[dependencies]
axum = "0.7"
clickhouse = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rskafka = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
