# An empty [workspace] table tells Cargo: "this crate is intentionally
# NOT part of the parent workspace at finops-core/Cargo.toml."
# We exclude it because it compiles to bpfel-unknown-none (BPF bytecode),
# a completely different target than the rest of the workspace.
[workspace]

[package]
name    = "finops-ebpf"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[[bin]]
name = "finops-ebpf"
path = "src/main.rs"

[dependencies]
# aya-ebpf provides the kernel-side eBPF programming API:
# - Map types (RingBuf, HashMap, etc.)
# - Program type macros (#[kprobe], #[tracepoint], etc.)
# - BPF helper function bindings (bpf_get_current_pid_tgid, etc.)
aya-ebpf = "0.1"

# Our shared memory contract — no std, no features
# aya-log-ebpf is intentionally omitted: we don't use BPF-side logging
# in Phase 1. Add it back in Phase 2 when structured kernel-side logs
# are needed (it works via a BPF map, not the slow trace pipe).
finops-common = { path = "../finops-common" }

[profile.release]
# Link-Time Optimization: the linker can inline and eliminate dead code
# across crate boundaries, reducing the final BPF bytecode size.
lto = true

# In kernel space, there is no stack unwinding infrastructure.
# "panic = abort" means: if a panic somehow occurs, immediately halt.
# The Linux kernel verifier actually prevents most panic paths at
# compile time by rejecting programs with unbounded loops or null deref.
panic = "abort"

opt-level = 2
